# kff-tools

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  bucket.cpp  bucket.hpp  compact.cpp  compact.hpp  convert.cpp  convert.hpp  datarm.cpp  datarm.hpp  debug.sh  disjoin.cpp  disjoin.hpp  encoding.cpp  encoding.hpp  instr.cpp  instr.hpp  kfftools.cpp  kfftools.hpp  merge.cpp  merge.hpp  outstr.cpp  outstr.hpp  sequences.cpp  sequences.hpp  shuffle.cpp  shuffle.hpp  sort.cpp  split.cpp  split.hpp  translate.cpp  translate.hpp  validate.cpp  validate.hpp
apps/: CMakeLists.txt  kfftools.cpp
benchmarks/: bench.sh  generate_kff.sh  sort_kmers.sh
data/: sars.fa  sars_manual.txt
debug_folder/: Alignement.txt  bucket25_10  bucket25_10.txt  bucket_problematique.txt  compact25_10  compact25_10.txt  filter.py  full_test.txt  instr25  readme.txt  test.txt  verif.py
example/: simple.txt
src/: CMakeLists.txt  bucket.cpp  compact.cpp  compact.hpp  datarm.cpp  disjoin.cpp  encoding.cpp  encoding.hpp  index.cpp  index.hpp  instr.cpp  instr.hpp  kfftools.cpp  kfftools.hpp  merge.cpp  merge.hpp  outstr.cpp  outstr.hpp  rmq.hpp  sequences.cpp  sequences.hpp  shuffle.cpp  sort.cpp  sort.hpp  split.cpp  split.hpp  translate.cpp  translate.hpp  validate.cpp  validate.hpp
src/tools/: CMakeLists.txt  bucket.cpp  compact.cpp  datarm.cpp  disjoin.cpp  index.cpp  instr.cpp  merge.cpp  shuffle.cpp  sort.cpp  split.cpp  validate.cpp
src/tools/include/: bucket.hpp  compact.hpp  datarm.hpp  disjoin.hpp  index.hpp  instr.hpp  kfftools.hpp  merge.hpp  outstr.hpp  shuffle.hpp  sort.hpp  split.hpp  translate.hpp  validate.hpp
src/utils/: CMakeLists.txt  RMT.hpp  ZRMT.hpp  colinear.cpp  colinear.hpp  encoding.cpp  sequences.cpp  sequences.hpp  skmers.cpp  skmers.hpp
tests/: CMakeLists.txt  RMT_test.cpp  ZRMT_test.cpp  colinear_test.cpp  compact_test.cpp  encoding_test.cpp  kmer_generation.py  main.cpp  sequence_test.cpp  skmers_test.cpp  test_merge.py  test_tools_commands.py
